# TrustLLM

./: LICENSE  README.md
api/: package.json
api/src/: index.ts
api/src/routes/: compare.ts  eval.ts  results.ts
api/src/services/: comparison.service.ts  rust-eval.service.ts
api/src/types/: index.ts
cli/: package.json
cli/src/: cli.ts
docs/: PHASE2_COMPLETE.md
eval/: .gitignore  Cargo.toml  sample_config.json  setup.sh
eval/src/: config.rs  main.rs  metrics.rs  models.rs  models_backup.rs  models_new.rs  runner.rs  storage.rs  types.rs
examples/: advanced-evaluation.ts  basic-evaluation.ts  cli-examples.sh  package.json
sdk/: README.md  package.json
sdk/src/: index.ts
